--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 #requirements.txt
-snowflake-snowpark-python
-streamlit
+name: app_environment
+channels:
+  - snowflake
+dependencies:
+  - python=3.11.*
+  - snowflake-snowpark-python=
+  - streamlit=
+
